# power-analysis-attack

aes/: Makefile  aes.c  aes.h  main.c
dpa/: CMakeLists.txt
dpa/src/: main.cpp
oscilloscope/: CMakeLists.txt
oscilloscope/src/: main.cpp
